Fixed a midifiers bug

1) The tool should register the modifiers it is going to use
2) The gesture() should be optional for a tool

BUG:317200